--- a/DeltaSYS/ViewController/public_html/resources/css/style1.css
+++ b/DeltaSYS/ViewController/public_html/resources/css/style1.css
@@ -86,15 +86,37 @@ position: absolute;
 top:200px;
 left:500px;
 }
-#consulta
+#left
 {
 width:100px;
-height: 450px;
+height: 440px;
 padding:5px;
-border:5px;
+border:1px;
 margin:0px;
 position: absolute;
-top:10px;
+top:60px;
+left:20px;
+}
+#right
+{
+width:785px;
+height: 440px;
+padding:5px;
+border:1px;
+margin:0px;
+position: absolute;
+top:60px;
+left:150px;
+}
+#top
+{
+width:915px;
+height: 40px;
+padding:5px;
+border:1px;
+margin:0px;
+position: absolute;
+top:0px;
 left:20px;
 }
 img.imagen
@@ -102,14 +124,8 @@ img.imagen
 width:100px;
 height:170px;
 }
-#search
+img.reloj
 {
-width:780px;
-height: 450px;
-padding:5px;
-border:5px;
-margin:0px;
-position: absolute;
-top:20px;
-left:150px;
+width:100;
+height:100;
 }
