--- a/DeltaSYS/ViewController/public_html/resources/css/style1.css
+++ b/DeltaSYS/ViewController/public_html/resources/css/style1.css
@@ -263,11 +263,31 @@ li
 	font-size:11px;
 	color:#666;
 	background-color:white;
-	border-left:10px solid #444;
+	border-left:5px solid #444;
 }
 li:hover
 {
 	color:white;
 	background-color:#444;
-	border-left-color:#999;
+	border-left-color:#444;
+}
+
+td.subtitulo
+{
+        color: #eee;
+        background: #333;
+        border:1px solid #000; 
+        display:inline-block;
+}
+td.subtitulo:hover
+{
+        color: #333;
+        background: #ddd;
+        border:1px solid #000;
+        cursor:pointer;
+}
+#map
+{
+        width:600px;
+        height:350px;
 }
